force-app/main/default/objects/Categoria__c/Categoria__c.object-meta.xml
<CustomObject>
    <description>Este objeto personalizado almacena la planificación anual de ventas del año 2025, segmentada por categorías estratégicas de venta. Permite registrar metas de venta netas (antes de IVA) y el porcentaje de comisión asignado a cada categoría. Facilita el seguimiento del cumplimiento de metas comerciales por canal, tipo de cliente o enfoque de venta. Es utilizado para generar reportes y dashboards que apoyan la toma de decisiones en el área comercial.</description>
    <label>Categoría</label>
    <nameField>
        <label>Nombre de Categoria</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categorías</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>