force-app/main/default/objects/Categoria__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <description>Número de la categoría de ventas.</description>
    <label>Categoría</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>