force-app/main/default/objects/Categoria__c/fields/Derating_Factor__c.field-meta.xml
<CustomField>
    <fullName>Derating_Factor__c</fullName>
    <description>Factor de reducción aplicable a las ventas dentro de esta categoría.</description>
    <label>Derating Factor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>