force-app/main/default/objects/Categoria__c/fields/Meta_de_Venta_Neto_antes_de_IVA__c.field-meta.xml
<CustomField>
    <fullName>Meta_de_Venta_Neto_antes_de_IVA__c</fullName>
    <description>Meta de venta neta antes de IVA para la categoría, expresada en moneda local.</description>
    <label>Meta de Venta (Neto antes de IVA)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>