force-app/main/default/objects/Categoria__c/fields/Porcentaje_Comision__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Comision__c</fullName>
    <description>Porcentaje de comisión aplicable a las ventas dentro de esta categoría.</description>
    <label>Porcentaje Comisión</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>