force-app/main/default/objects/Categoria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Categoria__c</columns>
    <columns>NAME</columns>
    <columns>Meta_de_Venta_Neto_antes_de_IVA__c</columns>
    <columns>Porcentaje_Comision__c</columns>
    <columns>Derating_Factor__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>